Fri Apr 16 08:27:08 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb: skip linking when libraries to be preloaded not
	  compiled.  [ruby-list:39561]

Thu Apr 15 19:57:11 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (pst_success_p): new method Process::Status#success?.
	  [ruby-dev:23385]

	* rubytest.rb: do nothing while cross-compiling, return status in
	  system independent style.

Thu Apr 15 19:26:54  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* dir.c (rb_push_glob): Dir.glob() should return nil if block is given.
	  (http://www.ruby-lang.org/ja/man/index.cgi?cmd=view;name=Dir)

	* dir.c (push_braces): Dir.glob() should handle '{ }' nested more than
	  3 times.

	* dir.c (push_braces, rb_push_glob): Dir.glob() should handle escaped
	  '{' and '}' and ','.

	  [ruby-dev:23376]

Thu Apr 15 17:12:13 2004  Tanaka Akira  <akr@m17n.org>

	* ext/gdbm/gdbm.c (Init_gdbm): define GDBM::READER, GDBM::WRITER,
	  GDBM::WRCREAT and GDBM::NEWDB.
	  (fgdbm_initialize): use specified read/write flag.

Wed Apr 14 13:06:09 2004  Doug Kearns  <djkea2@mugca.its.monash.edu.au>

	* array.c, enum.c, eval.c, file.c, io.c, numeric.c, object.c, prec.c,
	  process.c, re.c, string.c: typos in RDoc comments.  [ruby-core:02783]

Wed Apr 14 11:29:56 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* numeric.c (flo_eq): workaround for bcc32's bug.
	  (ruby-bugs-ja:PR#594)

Wed Apr 14 10:57:40  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* defines.h: include <net/socket.h> to get fd_set definition in BeOS.

Tue Apr 13 23:00:55 2004  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/rinda/rinda.rb: change pattern matching.
	  a === b -> a == b || a === b. [druby-ja:98]

	* test/rinda/test_rinda.rb: ditto.

Tue Apr 13 21:50:57 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bcc32/Makefile.sub (PHONY): Borland make disallows empty command
	  rules.

Tue Apr 13 17:55:16 2004  Minero Aoki  <aamine@loveruby.net>
